# mc-server-balance

./: .dockerignore  .env.example  .gitignore  Makefile  docker-compose.dev.yml  docker-compose.yml  package.json  pyproject.toml
backend/: .dockerignore  Dockerfile  alembic.ini  env.example  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep
backend/app/: __about__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: scpi.py  simulation.py
backend/app/core/: config.py  exceptions.py
backend/app/models/: schemas.py
backend/app/services/: scpi_calculator.py
backend/tests/: conftest.py  test_api.py  test_scpi_calculator.py
data/: config.json
frontend/: .dockerignore  .prettierrc  Dockerfile  env.example  env.template.js  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/error-boundary/: ErrorBoundary.tsx
frontend/src/components/simulator/: RiskDisclaimer.tsx  SCPISimulator.tsx
frontend/src/components/simulator/charts/: DividendChart.tsx  DividendDonutChart.tsx  DonutChartPerfect.tsx  InvestmentChart.tsx  StackedAreaChart.tsx
frontend/src/components/simulator/panels/: ResultsPanel.tsx  RisksPanel.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  loading-spinner.tsx  select.tsx  slider.tsx  toaster.tsx
frontend/src/contexts/: README.md  SimulatorContext.tsx
frontend/src/hooks/: useScpiAPI.ts
frontend/src/lib/: filename-utils.ts  utils.ts
frontend/src/lib/__tests__/: filename-utils.test.ts
frontend/src/services/: api.ts
frontend/src/test/: setup.ts  utils.test.ts
frontend/src/test/components/: Button.test.tsx
frontend/src/types/: chart.ts  scpi.ts  vite-env.d.ts
scripts/: health-check.sh  init-db.sql  start-dev.sh  start.js  status-dev.sh  stop-dev.sh  update-frontend-env.sh
src/: bot.js  index.js
src/commands/: balance.js  progress.js  setcost.js
src/jobs/: monitor.js
src/services/: paypal.js
src/utils/: config.js  embed.js  storage.js
